content/kubernetes/v1.5/source/includes/list-tables/compatibility-k8s-os.rst
.. list-table::
   :header-rows: 1
   :widths: 15 25 25 20 15

   * - |k8s-op-short| Release Series
     - Release Date 
     - :abbr:`EOL (End of Life)` date
     - |k8s| Version
     - OpenShift Version

   * - 1.5.0
     - November 15, 2025
     - to be determined
     - 1.32, 1.33, 1.34
     - 4.19, 4.20, 4.21

   * - 1.4.0
     - September 17, 2025
     - to be determined
     - 1.31, 1.32, 1.33
     - 4.18, 4.19, 4.20

   * - 1.3.0
     - September 4, 2025
     - to be determined
     - 1.31, 1.32, 1.33
     - 4.18, 4.19, 4.20

   * - 1.2.0
     - July 10, 2025
     - to be determined
     - 1.29, 1.30, 1.31
     - 4.16, 4.17, 4.18

   * - 1.1.0
     - May 23, 2025
     - to be determined
     - 1.29, 1.30, 1.31
     - 4.16, 4.17, 4.18

   * - 1.0.1
     - May 14, 2025
     - to be determined
     - 1.29, 1.30, 1.31
     - 4.16, 4.17, 4.18

   * - 1.0.0
     - May 6, 2025
     - to be determined
     - 1.29, 1.30, 1.31
     - 4.16, 4.17, 4.18
