content/kubernetes/v1.10/source/includes/list-tables/compatibility-k8s-os.rst
.. list-table::
   :header-rows: 1
   :widths: 12 18 18 15 15 15

   * - |k8s-op-short| Release Series
     - Release Date
     - :abbr:`EOL (End of Life)` date
     - |k8s| Version
     - OpenShift Version
     - OpenShift Minimum Supported Version (:abbr:`OLM (Operator Lifecycle Manager)` Bundle)

   * - 1.10.0
     - July 30, 2026
     - to be determined
     - 1.34, 1.35, 1.36
     - 4.21, 4.22, 4.23
     - 4.6

   * - 1.9.0
     - June 30, 2026
     - to be determined
     - 1.34, 1.35, 1.36
     - 4.21, 4.22, 4.23
     -

   * - 1.8.1
     - May 20, 2026
     - to be determined
     - 1.33, 1.34, 1.35
     - 4.20, 4.21, 4.22
     -

   * - 1.8.0
     - April 2, 2025
     - to be determined
     - 1.33, 1.34, 1.35
     - 4.20, 4.21, 4.22
     -

   * - 1.7.0
     - February 10, 2026
     - to be determined
     - 1.33, 1.34, 1.35
     - 4.20, 4.21, 4.22
     -

   * - 1.6.1
     - December 16, 2025
     - to be determined
     - 1.32, 1.33, 1.34
     - 4.19, 4.20, 4.21
     -

   * - 1.6.0
     - November 17, 2025
     - to be determined
     - 1.32, 1.33, 1.34
     - 4.19, 4.20, 4.21
     -

   * - 1.5.0
     - November 15, 2025
     - to be determined
     - 1.32, 1.33, 1.34
     - 4.19, 4.20, 4.21
     -

   * - 1.4.0
     - September 17, 2025
     - to be determined
     - 1.31, 1.32, 1.33
     - 4.18, 4.19, 4.20
     -

   * - 1.3.0
     - September 4, 2025
     - to be determined
     - 1.31, 1.32, 1.33
     - 4.18, 4.19, 4.20
     -

   * - 1.2.0
     - July 10, 2025
     - to be determined
     - 1.29, 1.30, 1.31
     - 4.16, 4.17, 4.18
     -

   * - 1.1.0
     - May 23, 2025
     - to be determined
     - 1.29, 1.30, 1.31
     - 4.16, 4.17, 4.18
     -

   * - 1.0.1
     - May 14, 2025
     - to be determined
     - 1.29, 1.30, 1.31
     - 4.16, 4.17, 4.18
     -

   * - 1.0.0
     - May 6, 2025
     - to be determined
     - 1.29, 1.30, 1.31
     - 4.16, 4.17, 4.18
     -
